--- a/views/index.ejs
+++ b/views/index.ejs
@@ -3,31 +3,62 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>User List</title>
+    <title>User List</title> 
+    <!--Styles-->
     <style>
       .container {
         margin: 0 auto;
         max-width: 800px;
         padding: 20px;
+        box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); 
+        background: #f9f9f9; 
       }
+    
       .user-card {
-        background-color: #f0f0f0;
+        background-color: #ffffff; 
         padding: 10px;
         margin-bottom: 20px;
         border-radius: 5px;
+        box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1); 
+        border-left: 5px solid #bfc1c2; 
+        background-image: linear-gradient(to right, #e8e9eb, #f5f5f5); 
       }
+    
       .user-card h2 {
-        color: #333;
+        color: #bfc1c2; 
+        text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.2); 
       }
-      .email,
-      .age {
-        color: #666;
+    
+      .email, .age {
+        color: #4f4f4f; 
       }
-      .user-card form,
-      .email-update-form {
+    
+      .user-card form, .email-update-form {
         margin-top: 10px;
+        background: rgba(255, 255, 255, 0.8); 
+        padding: 10px;
+        border-radius: 5px;
+        box-shadow: inset 0 0 10px rgba(0, 0, 0, 0.1); 
+      }
+    
+      button {
+        background-image: linear-gradient(to bottom, #e8e9eb, #bfc1c2); 
+        border: none;
+        color: #333; 
+        padding: 10px 20px;
+        margin: 5px;
+        border-radius: 5px;
+        cursor: pointer;
+        box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2); 
+        transition: transform 0.1s ease-in-out; 
+      }
+    
+      button:active {
+        transform: translateY(2px); 
       }
     </style>
+    
+    
   </head>
   <body>
     <div class="container">
